--- a/src/404.html
+++ b/src/404.html
@@ -88,7 +88,7 @@
 
   <!--/ REQUIRED SCRIPTS /-->
   <!--/ Script files at the bootom to reduce loading time /-->
-  <script src="assets/js/lib/jquery-1.10.2.min.js"></script>
+  <script src="assets/js/lib/jquery.js"></script>
   <script src="assets/js/lib/jquery.flipping_text.js"></script>
   <script src="assets/js/lib/jquery.simple-text-rotator.js"></script>
   <script src="assets/js/lib/scrollReveal.js"></script>
