--- a/src/404.html
+++ b/src/404.html
@@ -5,10 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Error 404 Page">
   <meta name="author" content="tbaltrushaitis@gmail.com">
+
   <!--[if IE]>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <![endif]-->
-  <title>Oops, seems that Error 404 occurs. It means the page requested is not exist on this server. </title>
+
+  <title>Oops, Error 404 occurs. It means the page requested is not exist on this server. </title>
+
   <!--REQUIRED STYLE SHEETS-->
   <!-- Bootstrap Style sheet-->
   <link href="assets/css/bootstrap.css" rel="stylesheet" />
@@ -29,10 +32,11 @@
     <script src="assets/js/lib/respond.min.js"></script>
   <![endif]-->
 </head>
+
 <!--/
-<body class="striped">
-/-->
 <body>
+/-->
+<body class="striped">
   <div id="wrapper"><!--Page Wrapper start-->
     <div class="container">  <!--Page container start-->
       <div class="row">
@@ -41,7 +45,7 @@
           <h3 class="not-found">RESOURCE NOT FOUND</h3>
           <h2><i class="fa fa-mail-reply">&nbsp;</i> <a class="go-back" href="#">GO BACK</a></h2>
           <div class="row" data-scroll-reveal="enter bottom move 250px">
-            <a class="btn btn-danger" id="home_page"><i class="fa fa-home fa-2x"></i> Home Page</a>
+            <a class="btn btn-danger" id="home_page"><i class="fa fa-home fa-2x"></i> Home</a>
             <a class="btn btn-primary" id="about"><i class="fa fa-info-circle fa-2x"></i> About Us</a>
             <a class="btn btn-warning" id="services"><i class="fa fa-thumbs-o-up fa-2x"></i> Services</a>
             <a class="btn btn-info" id="career"><i class="fa fa-users fa-2x"></i> Career</a>
@@ -113,11 +117,11 @@
             </a>
 
           </div>
-          </div> <!--Right bar end-->
+        </div> <!--Right bar end-->
       </div>
       <div class="row">
         <div class="col-md-12 move-right" data-scroll-reveal="enter top move 250px">
-          <i class="fa fa-hand-o-right fa-1x"></i> <strong class="company"> Company Name</strong>
+          <i class="fa fa-hand-o-right fa-1x"></i> <strong class="company"> by Tomkas</strong>
         </div>
       </div>
     </div> <!--Page container End-->
@@ -129,19 +133,20 @@
   <script src="assets/js/lib/jquery.flipping_text.js"></script>
   <script src="assets/js/lib/jquery.simple-text-rotator.js"></script>
   <script src="assets/js/lib/scrollReveal.js"></script>
+
   <!--Custom Script File-->
   <script src="assets/js/front/custom-script.js"></script>
 
   <script>
-    var httpBase      =   location.protocol + '//' + location.host
-      , pageHome      =   httpBase
-      , pageAbout     =   httpBase + '/' + 'about'
-      , pageServices  =   httpBase + '/' + 'services'
-      , pageCareer    =   httpBase + '/' + 'career'
-      , pageContacts  =   httpBase + '/' + 'contacts'
+    var BaseUrl       =   location.protocol + '//' + location.host
+      , pageHome      =   BaseUrl
+      , pageAbout     =   BaseUrl + '/' + 'about'
+      , pageServices  =   BaseUrl + '/' + 'services'
+      , pageCareer    =   BaseUrl + '/' + 'career'
+      , pageContacts  =   BaseUrl + '/' + 'contacts'
     ;
 
-    $('#home_page').attr({'href': httpBase});
+    $('#home_page').attr({'href': pageHome});
     $('#about').attr({'href': pageAbout});
     $('#services').attr({'href': pageServices});
     $('#career').attr({'href': pageCareer});
